# BookingHotels

./: .gitignore  README.md  draft.py  pyproject.toml
app/: config.py  database.py  exceptions.py  main.py
app/admin/: auth.py  views.py
app/bookings/: dao.py  models.py  router.py  schemas.py  service.py
app/dao/: base.py
app/hotels/: dao.py  models.py  router.py  schemas.py
app/hotels/rooms/: dao.py  models.py  router.py
app/images/: router.py
app/migrations/: env.py
app/migrations/versions/: e4df614311a2_first_revision.py
app/pages/: router.py
app/tasks/: celery_app.py  email_templates.py  scheduled.py  tasks.py
app/templates/: hotels.html
app/tests/: conftest.py
app/users/: auth.py  dependencies.py  models.py  router.py  schemas.py
